--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
             font-family: 'Comic Sans MS', cursive, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffe4e1;
+            background-color: #ffe4e1; /* Light pinkish background */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,7 +21,7 @@
             margin-bottom: 20px;
         }
         .login-container {
-            background: linear-gradient(135deg, #ffccff, #ff99cc);
+            background: linear-gradient(135deg, #ffccff, #ff99cc); /* TWICE-inspired gradient */
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
@@ -31,7 +31,7 @@
         }
         .login-container h2 {
             margin-bottom: 20px;
-            color: #d147a3;
+            color: #d147a3; /* Purple-pink color representing TWICE */
             font-size: 24px;
         }
         .login-container input {
@@ -46,7 +46,7 @@
         .login-container button {
             width: 100%;
             padding: 12px;
-            background: linear-gradient(135deg, #ff99cc, #ff66b3);
+            background: linear-gradient(135deg, #ff99cc, #ff66b3); /* TWICE's signature gradient */
             color: white;
             border: none;
             border-radius: 8px;
@@ -65,6 +65,29 @@
             color: #d147a3;
             font-style: italic;
         }
+        .twice-text {
+            font-size: 18px;
+            color: #d147a3; /* Adding a TWICE text reference */
+            margin-top: 10px;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
+    <div class="twice-logo">
+        <!-- Add TWICE's logo image -->
+        <img src="https://example.com/twice_logo.png" alt="TWICE Logo">
+    </div>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form action="#">
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <div class="twice-text">
+            <p>Powered by TWICE!</p> <!-- Optional TWICE-themed message -->
+        </div>
+    </div>
+</body>
+</html>
